<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ControlElement_HMI" Id="{2058c532-d1b3-450f-a008-e980fa54748a}">
    <Declaration><![CDATA[TYPE ST_ControlElement_HMI :
STRUCT
	bZmiennaControlElement		: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>