<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_ControlElement_HMI_Link" Id="{638edb7f-1be4-49d0-b6e7-dd9a320886ec}">
    <Declaration><![CDATA[TYPE ST_ControlElement_HMI_Link EXTENDS ST_BaseControlElement_HMI_Link :
STRUCT
	stControlElement			: ST_ControlElement_HMI;
	
	stComponent1				: ST_Component_HMI_Link;
	stComponent2				: ST_Component_HMI_Link;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>